update with bower.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -57,7 +57,7 @@
         urlArgs : 'v=' + releaseVersion
     };
     </script>
-    <script data-main="/scripts/main.js" src="/scripts/libs/require.js"></script>
+    <script data-main="/scripts/main.js" src="bower_components/requirejs/require.js"></script>
 
   </head>
 
